[project]
name = "end-to-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "duckduckgo-search>=4.0.0",
    "faiss-cpu>=1.7.4",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-groq>=1.1.0",
    "langchain-openai>=0.0.5",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=0.0.20",
    "openai>=2.8.1",
    "pinecone>=7.3.0",
    "pydantic>=2.0.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.28.0",
    "tavily-python>=0.3.0",
    "tiktoken>=0.5.0",
    "unstructured>=0.10.0",
    "youtube-transcript-api>=1.2.3",
]
